--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,51 @@
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+.hero-image {
+    background-image: linear-gradient(rgba 0, 0, 0, 0.7) (rgba 0, 0, 0, 0.7) url(https://images.unsplash.com/photo-1492963357580-ef5af79966cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=812&q=80);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-image .hero-text {
+    color: #fff;
+    text-align: center;
+}
+
+.hero-image .hero-text h1 {
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.hero-image .hero-text {
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 10px;
+}
+
+.hero-image .hero-btn {
+    text-decoration: none;
+    color: #fff;
+    background: #000;
+    padding: 10px 30px;
+    border-radius: 5px;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.hero-image .hero-btn :hover {
+    background: #fff;
+    color:#000
+}
+
 h1,  h2, h3, h4, h5, h6 {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
@@ -8,7 +56,7 @@ a, p, span, li, img {
 }
 
 header{
-    background-color: black;
+    background-color: green;
     color: white;
 }
 
@@ -36,4 +84,6 @@ li {
 .logo {
     margin-top: 30px;
     margin-top: 10px;
+    height: 75px;
+    width: 75px;
 }
