--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,41 +12,25 @@ body {
     background-size: cover;
     height: 80%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items:  center;
+    flex-direction: column;
 }
 
-.hero-image .hero-text {
-    color: #fff;
+.hero-text {
+    color: rgb(94, 153, 16);
     text-align: center;
+    margin-top: 200px;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 10px;
 }
 
  .hero-text h1 { 
     font-size: 50px;
     font-weight: 500;
-}
-
-.hero-image .hero-text {
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 10px;
-    
+    color: darkkhaki;
 } 
 
- /* .hero-image .hero-btn {
-    text-decoration: none;
-    color: #fff;
-    background: #000;
-    padding: 10px 30px;
-    border-radius: 5px;
-    margin-top: 10px;
-    display: inline-block;
-}
-
-.hero-image .hero-btn :hover {
-    background: #fff;
-    color:#000 
- }*/
 
 h1,  h2, h3, h4, h5, h6 {
     font-family: 'Roboto Condensed', sans-serif;
@@ -67,13 +51,6 @@ a {
     text-decoration: none;
 }
 
-nav{
-    float: right;
-    margin-top: 30px;
-    margin-right: 10px;
-    position: sticky;
-}
-
 li {
     display: inline-block;
 }
@@ -87,4 +64,23 @@ li {
     margin-top: 10px;
     height: 150px;
     width: 150px;
+}
+
+ul {
+    padding-inline-start: 0;
+    /* display: flex; */
+}
+
+.navbar {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 10px;
+}
+
+iframe {
+    position: sticky;
+    top: 50px;
 }
