--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 80%;
+    height: 100vh;
     display: flex;
     align-items:  center;
     flex-direction: column;
@@ -19,31 +19,20 @@ body {
 .hero-text {
     color: rgb(94, 153, 16);
     text-align: center;
-    margin-top: 200px;
+    margin-top: 275px;
     font-size: 30px;
     font-weight: 500;
     line-height: 10px;
 }
 
- .hero-text h1 { 
+ .hero-text-heading { 
     font-size: 50px;
     font-weight: 500;
     color: darkkhaki;
 } 
 
-
-h1,  h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
-}
-
-a, p, span, li, img {
+p, a {
     font-family: 'Ubuntu', sans-serif;
-}
-
-header{
-    background-color: green;
-    color: white;
 }
 
 a {
@@ -57,18 +46,18 @@ li {
 
 .nav-links {
     padding: 10px 25px;
-    background-color: gray;
+    background-color: rgb(111, 133, 158);
 }
 
 .logo {
     margin-top: 10px;
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
 }
 
 ul {
     padding-inline-start: 0;
-    /* display: flex; */
+    color:#ece17e
 }
 
 .navbar {
@@ -80,7 +69,35 @@ ul {
     top: 10px;
 }
 
+.introduction {
+    background-color:black;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text {
+    background-color:gray;
+    width: 33vw;
+    padding: 20px 50px;
+    }
+
+    .intro-text {
+        font-size: 50px;
+        line-height: 100px;
+    }
+    
+  .vid {
+    background-color: rgb(11, 62, 109);
+    width: 33vw;
+  }
+
 iframe {
     position: sticky;
-    top: 50px;
+    top: 22%;
+}
+
+footer {
+    height: 20vh;
+    background-color: rgba(0, 255, 255, 0.281);
 }
