--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,103 +1,112 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    font-family: 'Roboto Condensed', sans-serif;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	font-family: "Roboto Condensed", sans-serif;
 }
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(https://images.unsplash.com/photo-1492963357580-ef5af79966cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=812&q=80);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    align-items:  center;
-    flex-direction: column;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+		url(https://images.unsplash.com/photo-1492963357580-ef5af79966cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=812&q=80);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 
 .hero-text {
-    color: rgb(94, 153, 16);
-    text-align: center;
-    margin-top: 275px;
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 10px;
+	color: rgb(94, 153, 16);
+	text-align: center;
+	margin-top: 275px;
+	font-size: 30px;
+	font-weight: 500;
+	line-height: 10px;
 }
 
- .hero-text-heading { 
-    font-size: 50px;
-    font-weight: 500;
-    color: darkkhaki;
-} 
+.hero-text-heading {
+	font-size: 50px;
+	font-weight: 500;
+	color: darkkhaki;
+}
 
-p, a {
-    font-family: 'Ubuntu', sans-serif;
+p,
+a {
+	font-family: "Ubuntu", sans-serif;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 li {
-    display: inline-block;
+	display: inline-block;
 }
 
 .nav-links {
-    padding: 10px 25px;
-    background-color: rgb(111, 133, 158);
+	padding: 10px 25px;
+	background-color: rgb(111, 133, 158);
 }
 
 .logo {
-    margin-top: 10px;
-    height: 300px;
-    width: 300px;
+	margin-top: 10px;
+	height: 100px;
+	width: 100px;
 }
 
 ul {
-    padding-inline-start: 0;
-    color:#ece17e
+	padding-inline-start: 0;
+	color: #ece17e;
 }
 
 .navbar {
-    width: 100%;
-    height: 150px;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 10px;
+	width: 100%;
+	height: 150px;
+	display: flex;
+	justify-content: space-between;
+	position: fixed;
+	top: 10px;
 }
 
 .introduction {
-    background-color:black;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text {
-    background-color:gray;
-    width: 33vw;
-    padding: 20px 50px;
-    }
-
-    .intro-text {
-        font-size: 50px;
-        line-height: 100px;
-    }
-    
-  .vid {
-    background-color: rgb(11, 62, 109);
-    width: 33vw;
-  }
-
-iframe {
-    position: sticky;
-    top: 22%;
+	background-color: black;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
 }
 
-footer {
-    height: 20vh;
-    background-color: rgba(0, 255, 255, 0.281);
+.text {
+	background-color: rgb(11, 62, 109);
+	width: 33vw;
+	padding: 20px 50px;
+}
+
+.intro-text {
+	font-size: 50px;
+	line-height: 100px;
+}
+
+.vid {
+	background-color: rgb(11, 62, 109);
+	width: 33vw;
+}
+
+iframe {
+	position: sticky;
+	top: 22%;
+	aspect-ratio: 16/9;
+	width: 30vw;
+}
+
+.socials-container {
+	height: 20vh;
+	background-color: rgb(12, 54, 54);	
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	font-weight: bolder;
+	font-size: larger;
 }
