--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,7 +78,7 @@ ul {
 }
 
 .text {
-	background-color: rgb(11, 62, 109);
+	background-color: #0b3e6d;
 	width: 33vw;
 	padding: 20px 50px;
     color: #ffbdde;
